--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -12,4 +12,47 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+
+  @media (max-width: 768px) {
+    .experience {
+      margin: 40px 20px;
+    }
+  
+    .experience-title {
+      font-size: 36px;
+      margin-bottom: 50px;
+      text-align: left;
+      padding-left: 50px;
+    }
+  
+    .vertical-timeline-element-title {
+      font-size: 1.1rem !important;
+    }
+  
+    .vertical-timeline-element-subtitle {
+      font-size: 1rem !important;
+    }
+  
+    .vertical-timeline-element-content {
+      padding: 20px 25px !important;
+      font-size: 1rem !important;
+      line-height: 1.6rem !important;
+    }
+  
+    .vertical-timeline-element-date {
+      font-size: 0.9rem !important;
+    }
+  
+    .project-overlay p, 
+    .vertical-timeline-element-content p {
+      font-size: 1rem !important;
+      text-align: justify;
+    }
+  
+    .vertical-timeline-element-icon {
+      width: 40px !important;
+      height: 40px !important;
+      margin-left: -20px;
+    }
+  }
   
