--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -57,5 +57,38 @@
     text-decoration: none;
     color: inherit;
     display: inline-block;
-  }
+}
+@media(max-width: 768px){
+    .hero img{
+        margin-top: 120px;
+        width: 320px;
+    }
+    .hero h1{
+        margin-top: 50px;
+        font-size: 40px;
+        width: 90%;
+    }
+    .hero p{
+        width: 80%;
+        font-size: 20px;
+        line-height: 32px;
+        margin: 10px 0px;
+    }
+    .hero-action{
+        gap: 16px;
+        font-size: 18px;
+        font-weight: 500;
+        margin-bottom: 50px;
+    }
+    .hero-action-btn{
+        padding: 20px 30px;
+        border-radius: 40px;
+    }
+    .hero-resume{
+        padding: 20px 50px;
+        border-radius: 40px;
+    }
+
+}
+
   
