--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -58,3 +58,54 @@
     transform: scale(1.05);
     box-shadow: 0 0 15px #b923e1a2;
 }
+.close{
+    display: none;
+}
+.Ham{
+    display: none;
+}
+@media(max-width:768px) {
+    .logo{
+        width: 100px;
+        height: auto;
+    }
+    .navbar {
+        margin: 20px 50px;
+    }
+    .nav-connect {
+        display: none;
+    }
+    .Ham{
+        display: block;
+        position: fixed;
+        right: 30px;
+        width: 6%;
+        z-index: 2;;
+    }
+    .close{
+        display: block;
+        position: relative;
+        top: 30px;
+        left: 290px;
+        width: 30px;
+    }
+    .nav-menu{
+        position: fixed;
+        flex-direction: column;
+        align-items: start;
+        top: 0;
+        gap: 30px;
+        background-color: #1F0016;
+        width: 350px;
+        height: 100%;
+        z-index: 2;
+        transition: right 0.5s;
+        right:-350px;
+    }
+    .nav-menu li{
+        font-size: 30px;
+        padding-left: 100px;
+        flex-direction: row;
+        gap: 20px;
+    }
+}
